syntax = "proto3";
package rooms;

import "google/protobuf/timestamp.proto";

option go_package = ".;proto";

service Rooms {
    rpc GetRoom(RoomID) returns (RoomStructResponse) {}
    rpc GetRooms(Filter) returns (GetRoomsResponse) {}
    rpc CreateRoom(RoomStruct) returns (RoomStructResponse) {}
    rpc DeleteRoom(DeleteRequest) returns (Status) {}
    rpc UpdateRoom(UpdateRequest) returns (RoomStructResponse) {}
    rpc AddUsers(AddUsersRequest) returns (Status) {}
}

message RoomID {
	string ID = 1;
}

message RoomStruct {
	string ID = 1;
	string Name = 2;
	int64 Status = 3;
	string CreatedBy = 4;
	google.protobuf.Timestamp CreatedAt = 5;
}

message Filter {
	repeated string RoomIDs = 1;
}

message GetRoomsResponse {
	repeated RoomStruct Rooms = 1;
	Status Status = 2;
}

message RoomStructResponse {
	RoomStruct Room = 1;
	Status Status = 2;
}

message DeleteRequest {
	string RoomID = 1;
	string UserID = 2;
}

message Status {
	bool Ok = 1;
	string Error = 2;
}

message UpdateRequest {
	RoomStruct Room = 1;
	string UserID = 2;
}

message AddUsersRequest {
	string RoomID = 1;
	string UserID = 2;
	repeated string UserIDs = 3;
}